--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Unit 5 Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/lightbox.min.css">
+  
 </head>
 
 <body>
@@ -15,33 +17,33 @@
     </div>
       
     <div class="row">
-      <img src="photos/01.jpg">
+      <a href="images/01.jpg" data-lightbox="images-1"><img src="images/01.jpg"></a>
 
-      <img src="photos/02.jpg">
+      <a href="images/02.jpg" data-lightbox="images-2"><img src="images/02.jpg"></a>
 
-      <img src="photos/03.jpg">
+      <a href="images/03.jpg" data-lightbox="images-3"><img src="images/03.jpg"></a>
 
-      <img src="photos/04.jpg">
+      <a href="images/04.jpg" data-lightbox="images-4"><img src="images/04.jpg"></a>
     </div>
 
     <div class="row">
-      <img src="photos/05.jpg">
+      <a href="images/05.jpg" data-lightbox="images-5"><img src="images/05.jpg"></a>
 
-      <img src="photos/06.jpg">
+      <a href="images/06.jpg" data-lightbox="images-6"><img src="images/06.jpg"></a>
+      
+      <a href="images/07.jpg" data-lightbox="images-7"><img src="images/07.jpg"></a>
 
-      <img src="photos/07.jpg">
-
-      <img src="photos/08.jpg">
+      <a href="images/08.jpg" data-lightbox="images-8"><img src="images/08.jpg"></a>
     </div>
 
     <div class="row">
-      <img src="photos/09.jpg">
+      <a href="images/09.jpg" data-lightbox="images-9"><img src="images/09.jpg"></a>
 
-      <img src="photos/10.jpg">
+      <a href="images/10.jpg" data-lightbox="images-10"><img src="images/10.jpg"></a>
 
-      <img src="photos/11.jpg">
+      <a href="images/11.jpg" data-lightbox="images-11"><img src="images/11.jpg"></a>
 
-      <img src="photos/12.jpg">
+      <a href="images/12.jpg" data-lightbox="images-12"><img src="images/12.jpg"></a>
     </div>
 
 
@@ -51,8 +53,8 @@
 
 
 
-
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
+<script src="js/lightbox.min.js"></script>
 
 </body>
 
