Working on Lightbox
Images shake during transitions. Why?

--- a/index.html
+++ b/index.html
@@ -15,46 +15,51 @@
     <input type="search">
     </div>
       
-    <div class="row">
-      <a href="images/01.jpg" data-lightbox="images-1"><img src="images/01.jpg"></a>
+    <div>
+      <a href="images//01.jpg" data-lightbox="image" data-title="Hay Bales
+      I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="images/01.jpg"></a>
 
-      <a href="images/02.jpg" data-lightbox="images-2"><img src="images/02.jpg"></a>
+      <a href="images/02.jpg" data-lightbox="image" data-title="Lake
+      The lake was so calm today. We had a great view of the snow on the mountains from here."><img src="images/02.jpg"></a>
 
-      <a href="images/03.jpg" data-lightbox="images-3"><img src="images/03.jpg"></a>
+      <a href="images/03.jpg" data-lightbox="image" data-title="Canyon
+      I hiked to the top of the mountain and got this picture of the canyon and trees below."><img src="images/03.jpg"></a>
 
-      <a href="images/04.jpg" data-lightbox="images-4"><img src="images/04.jpg"></a>
+      <a href="images/04.jpg" data-lightbox="image" data-title="Iceberg
+      It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="images/04.jpg"></a>
     </div>
 
-    <div class="row">
-      <a href="images/05.jpg" data-lightbox="images-5"><img src="images/05.jpg"></a>
+    <div>
+      <a href="images/05.jpg" data-lightbox="image"><img src="images/05.jpg"></a>
 
-      <a href="images/06.jpg" data-lightbox="images-6"><img src="images/06.jpg"></a>
+      <a href="images/06.jpg" data-lightbox="image"><img src="images/06.jpg"></a>
       
-      <a href="images/07.jpg" data-lightbox="images-7"><img src="images/07.jpg"></a>
+      <a href="images/07.jpg" data-lightbox="image"><img src="images/07.jpg"></a>
 
-      <a href="images/08.jpg" data-lightbox="images-8"><img src="images/08.jpg"></a>
+      <a href="images/08.jpg" data-lightbox="image"><img src="images/08.jpg"></a>
     </div>
 
-    <div class="row">
-      <a href="images/09.jpg" data-lightbox="images-9"><img src="images/09.jpg"></a>
+    <div>
+      <a href="images/09.jpg" data-lightbox="image"><img src="images/09.jpg"></a>
 
-      <a href="images/10.jpg" data-lightbox="images-10"><img src="images/10.jpg"></a>
+      <a href="images/10.jpg" data-lightbox="image"><img src="images/10.jpg"></a>
 
-      <a href="images/11.jpg" data-lightbox="images-11"><img src="images/11.jpg"></a>
+      <a href="images/11.jpg" data-lightbox="image"><img src="images/11.jpg"></a>
 
-      <a href="images/12.jpg" data-lightbox="images-12"><img src="images/12.jpg"></a>
+      <a href="images/12.jpg" data-lightbox="image"><img src="images/12.jpg"></a>
     </div>
-
-
-
-
-
 
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
 <script src="js/lightbox.min.js"></script>
 
+<script>
+  lightbox.option({
+    'showImageNumberLabel': false
+  })
+</script>
+
 </body>
 
-<html>
+</html>
