--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
     </div>
 
     <div>
-      <a href="images/05.jpg" data-lightbox="image"><img src="images/05.jpg"></a>
+      <a href="images/05.jpg" data-lightbox="image" data-title="Desert The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."><img src="images/05.jpg"></a>
 
-      <a href="images/06.jpg" data-lightbox="image"><img src="images/06.jpg"></a>
+      <a href="images/06.jpg" data-lightbox="image" data-title="Fall Fall is coming, I love when the leaves on the trees start to change color."><img src="images/06.jpg"></a>
       
-      <a href="images/07.jpg" data-lightbox="image"><img src="images/07.jpg"></a>
+      <a href="images/07.jpg" data-lightbox="image" data-title="Plantation I drove past this plantation yesterday, everything is so green!"><img src="images/07.jpg"></a>
 
-      <a href="images/08.jpg" data-lightbox="image"><img src="images/08.jpg"></a>
+      <a href="images/08.jpg" data-lightbox="image" data-title="Dunes My summer vacation to the Oregon Coast. I love the sandy dunes!"><img src="images/08.jpg"></a>
     </div>
 
     <div>
-      <a href="images/09.jpg" data-lightbox="image"><img src="images/09.jpg"></a>
+      <a href="images/09.jpg" data-lightbox="image" data-title="Countryside Lane We enjoyed a quiet stroll down this countryside lane."><img src="images/09.jpg"></a>
 
-      <a href="images/10.jpg" data-lightbox="image"><img src="images/10.jpg"></a>
+      <a href="images/10.jpg" data-lightbox="image" data-title="Sunset Sunset at the coast! The sky turned a lovely shade of orange."><img src="images/10.jpg"></a>
 
-      <a href="images/11.jpg" data-lightbox="image"><img src="images/11.jpg"></a>
+      <a href="images/11.jpg" data-lightbox="image" data-title="Cave I did a tour of a cave today and the view of the landscape below was breathtaking."><img src="images/11.jpg"></a>
 
-      <a href="images/12.jpg" data-lightbox="image"><img src="images/12.jpg"></a>
+      <a href="images/12.jpg" data-lightbox="image" data-title="Bluebells I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."><img src="images/12.jpg"></a>
     </div>
 
 
