--- a/index.html
+++ b/index.html
@@ -14,34 +14,84 @@
 
     <input id="search" name="search" placeholder="Start typing here" type="text" data-list=".sorting_list">
       
-    <div class='sorting_list container'>
+    <div class='container'>
+
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/01.jpg" data-lightbox="image" data-title="Hay Bales
       I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="images/thumbnails/01.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/02.jpg" data-lightbox="image" data-title="Lake
       The lake was so calm today. We had a great view of the snow on the mountains from here."><img src="images/thumbnails/02.jpg"></a>
+      </div>
+      </div>
    
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/03.jpg" data-lightbox="image" data-title="Canyon
       I hiked to the top of the mountain and got this picture of the canyon and trees below."><img src="images/thumbnails/03.jpg"></a>
- 
+      </div>
+      </div>
+
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/04.jpg" data-lightbox="image" data-title="Iceberg
       It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="images/thumbnails/04.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/05.jpg" data-lightbox="image" data-title="Desert The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."><img src="images/thumbnails/05.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/06.jpg" data-lightbox="image" data-title="Fall Fall is coming, I love when the leaves on the trees start to change color."><img src="images/thumbnails/06.jpg"></a>
+      </div>
+      </div>
       
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/07.jpg" data-lightbox="image" data-title="Plantation I drove past this plantation yesterday, everything is so green!"><img src="images/thumbnails/07.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/08.jpg" data-lightbox="image" data-title="Dunes My summer vacation to the Oregon Coast. I love the sandy dunes!"><img src="images/thumbnails/08.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/09.jpg" data-lightbox="image" data-title="Countryside Lane We enjoyed a quiet stroll down this countryside lane."><img src="images/thumbnails/09.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/10.jpg" data-lightbox="image" data-title="Sunset Sunset at the coast! The sky turned a lovely shade of orange."><img src="images/thumbnails/10.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/11.jpg" data-lightbox="image" data-title="Cave I did a tour of a cave today and the view of the landscape below was breathtaking." alt="chris"><img src="images/thumbnails/11.jpg"></a>
+      </div>
+      </div>
 
+      <div class="box">
+      <div class="img sorting_list">
       <a href="images/12.jpg" data-lightbox="image" data-title="Bluebells I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."><img src="images/thumbnails/12.jpg"></a>
+      </div>
+      </div>
+
     </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
