--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <input id="search" name="search" placeholder="Start typing here" type="text" data-list=".sorting_list">
   </div>
   
-    <div class="container">
+  <div class="container">
 
+  <div class="row">
     <div class="img sorting_list">
         <a href="images/01.jpg" data-lightbox="image" data-title="Hay Bales<br>
         I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="images/thumbnails/01.jpg"></a>
@@ -38,7 +39,9 @@
         <a href="images/04.jpg" data-lightbox="image" data-title="Iceberg<br>
         It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="images/thumbnails/04.jpg"></a>
         </div>
-  
+   </div>
+
+   <div class="row">
         <div class="img sorting_list">
         <a href="images/05.jpg" data-lightbox="image" data-title="Desert<br>
         The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."><img src="images/thumbnails/05.jpg"></a>
@@ -53,12 +56,14 @@
         <a href="images/07.jpg" data-lightbox="image" data-title="Plantation<br>
         I drove past this plantation yesterday, everything is so green!"><img src="images/thumbnails/07.jpg"></a>
         </div>
-  
+
         <div class="img sorting_list">
         <a href="images/08.jpg" data-lightbox="image" data-title="Dunes<br> 
         My summer vacation to the Oregon Coast. I love the sandy dunes!"><img src="images/thumbnails/08.jpg"></a>
         </div>
+    </div>
   
+    <div class="row">
         <div class="img sorting_list">
         <a href="images/09.jpg" data-lightbox="image" data-title="Countryside<br> 
         Lane We enjoyed a quiet stroll down this countryside lane."><img src="images/thumbnails/09.jpg"></a>
@@ -78,7 +83,8 @@
         <a href="images/12.jpg" data-lightbox="image" data-title="Bluebells<br> 
         I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."><img src="images/thumbnails/12.jpg"></a>
         </div>
-  
+    </div>
+
       </div>
     
   
@@ -99,11 +105,6 @@
       attribute: 'data-title'
     });
   </script>
-
-
-
-
-
 
 </body>
 
